--- a/example/hu.bme.mit.inf.friends.queries/plugin.xml
+++ b/example/hu.bme.mit.inf.friends.queries/plugin.xml
@@ -2,6 +2,7 @@
   <extension id="hu.bme.mit.inf.friends.queries.Queries" point="org.eclipse.viatra.query.runtime.queryspecification">
     <group group="org.eclipse.viatra.query.runtime.extensibility.SingletonExtensionFactory:hu.bme.mit.inf.friends.queries.Queries" id="hu.bme.mit.inf.friends.queries.Queries">
       <query-specification fqn="hu.bme.mit.inf.friends.queries.friend"/>
+      <query-specification fqn="hu.bme.mit.inf.friends.queries.friendCircle"/>
     </group>
   </extension>
   <extension id="queryrunner" point="org.eclipse.core.runtime.applications">
